--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -17,7 +17,7 @@
 
     <div class="divClass">
         <span id="spanId">
-            my favorit fud is asado
+            my favorit food is asado
         </span>
         <a href="apostoles.tresorcasino.com.ar:8080">Restaurante favorito</a>
     </div>
@@ -27,7 +27,6 @@
             <li>hamburguesa <img src="https://i.picsum.photos/id/1080/400/200.jpg" /></li>
             <li>papas fritas<img src="https://i.picsum.photos/id/1080/400/200.jpg" /></li>
         </ul>
-        
     </div>
 </body>
 </html>
